<resources>
    <string name="app_name" translatable="false">Bharatia</string>
    <string name="API_KEY" translatable="false">AIzaSyA1OjjQMHEGs38l7nQ4HcUU0SWO3LD-twA</string>
    <string name="title_activity_post_feed" translatable="false">PostFeedActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_test" translatable="false">test</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pref_file_key" translatable="false">bharatia.com</string>
    <string name="userEmail" translatable="false">hhh</string>
    <string name="userId" translatable="false">userId</string>
    <string name="pref_key" translatable="false">com.bharatia.app</string>
    <string name="editRequested" translatable="false">false</string>
    <string name="editRequestPost" translatable="false">post</string>
    <string name="rentPost" translatable="false">rent</string>
    <string name="salePost" translatable="false">sale</string>
    <string name="savedPost" translatable="false">saved</string>
    <string name="userInfo" translatable="false">user</string>
    <string name="userPost" translatable="false">userPost</string>
    <string name="locale" translatable="false">en</string>
    <string name="title_activity_direction" translatable="false">DirectionActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="facebook_application_id" translatable="false">161515444626961</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb161515444626961</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="log_in">Log In</string>
    <string name="or">Or, Signup With Social Media</string>
    <string name="login_signup">Don\'t have a an account?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="signup_username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="post_item_tk">"Tk: "</string>
    <string name="post_item_month">" month ago"</string>
    <string name="post_item_week">" week ago"</string>
    <string name="post_item_today">Posted today</string>
    <string name="post_item_room">" rooms"</string>
    <string name="post_item_sqft">" sq. ft"</string>
    <string name="post_item_posted_today">Posted today</string>
    <string name="post_item_days_ago">" days ago"</string>
    <string name="post_item_weeks_ago">" week ago"</string>
    <string name="post_item_months_ago">" month  ago"</string>
    <string name="post_item_uknown_time">Unknown  time</string>
    <string name="fragment_title_feed">Properties</string>
    <string name="fragment_title_search">Search</string>
    <string name="fragment_title_post">Add New Post</string>
    <string name="fragment_title_saved">Favourites</string>
    <string name="fragment_title_account">Account</string>
    <string name="post_done_tolet_edit_success">Your To-Let was Edited</string>
    <string name="post_done_tk">"TK: "</string>
    <string name="post_done_room">" rooms"</string>
    <string name="post_done_sq_ft">" sq. ft"</string>
    <string name="post_done_success_header">Posted Successfully</string>
    <string name="post_done_title">Post</string>
    <string name="post_done_tolet_success">Your To-Let was posted</string>
    <string name="post_done_share_for_response">Share it to get quicker response</string>
    <string name="fragment_rent_header">Rent</string>
    <string name="fragment_sale_header">Sale</string>
    <string name="map_search_filter">FIlter</string>
    <string name="map_search_place_text" translatable="false">search for places</string>
    <string name="search_filter">Filter</string>
    <string name="search_area">Area</string>
    <string name="search_type_the_area">Type the area</string>
    <string name="search_sale">Sale</string>
    <string name="search_rent">Rent</string>
    <string name="search_post_type">Post type</string>
    <string name="search_flat">Flat</string>
    <string name="search_sublet">Sublet</string>
    <string name="search_hotel">Hotel</string>
    <string name="search_any">Any</string>
    <string name="search_1" translatable="false">1</string>
    <string name="search_2" translatable="false">2</string>
    <string name="search_3" translatable="false">3</string>
    <string name="search_4" translatable="false">4</string>
    <string name="search_5" translatable="false">5</string>
    <string name="search_rooms">Rooms</string>
    <string name="search_price">Price Range</string>
    <string name="search_minimum_tk">Minimum Tk</string>
    <string name="search_maximum_tk">Maximum Tk</string>
    <string name="search_size">Size Range</string>
    <string name="search_minimum_sq_ft">Minimum sq. ft</string>
    <string name="search_to">to</string>
    <string name="search_maximum_sq_ft">Maximum sq. ft</string>
    <string name="search_search__button">Search</string>
    <string name="search_back">Back</string>
    <string name="search_0_results_found_matching_your_requirment">0 results found matching your requirement</string>
    <string name="search_search_again">Search Again</string>
    <string name="about_tag_line">A platform to rent, buy and sell properties</string>
    <string name="about_for_any_queries">For any queries</string>
    <string name="about_email">Email: upperbound18@gmail.com</string>
    <string name="about_phone">Phone: +8801521332260</string>
    <string name="post_details_price">Price</string>
    <string name="post_details_tk_per_month">Tk</string>
    <string name="post_details_address">Address</string>
    <string name="post_details_direction" translatable="false">Direction</string>
    <string name="post_details_rooms">Room</string>
    <string name="post_details_room_numbers">" Rooms"</string>
    <string name="post_details_size">Size</string>
    <string name="post_details_description">About this property</string>
    <string name="post_details_contact_info">Contact Info</string>
    <string name="post_details_call">Call</string>
    <string name="post_details_phone_number" translatable="false">Phone number</string>
    <string name="post_details_message">Message</string>
    <string name="post_details_email_address" translatable="false">Email address</string>
    <string name="post_details_email">Email</string>
    <string name="account_username">Username</string>
    <string name="account_email">Email</string>
    <string name="account_post_made">post made</string>
    <string name="account_your_posts">Your Posts</string>
    <string name="account_no_post">You haven\'t made any post</string>
    <string name="post_edit_heading">Edit Post</string>
    <string name="post_rent">Rent</string>
    <string name="post_sale">Sale</string>
    <string name="post_post_type">Post Type</string>
    <string name="post_flat">Flat</string>
    <string name="post_sublet">Sublet</string>
    <string name="post_hotel">Hotel</string>
    <string name="post_rooms">Rooms</string>
    <string name="post_any">Any</string>
    <string name="post_1" translatable="false">1</string>
    <string name="post_2" translatable="false">2</string>
    <string name="post_3" translatable="false">3</string>
    <string name="post_4" translatable="false">4</string>
    <string name="post_5" translatable="false">5</string>
    <string name="post_size">Property Size</string>
    <string name="post_size_in_sq_ft">Size (in sq. ft)</string>
    <string name="post_price">Price</string>
    <string name="post_price_per_month">Price (per month)</string>
    <string name="post_area">Area</string>
    <string name="post_address">Full Address</string>
    <string name="post_locate" translatable="false">Locate</string>
    <string name="post_select_property_location">Select your property location in google map. Your current location will be used otherwise</string>
    <string name="post_description">About this property</string>
    <string name="post_additional_description">Additional Description</string>
    <string name="post_phone_no">Phone No.</string>
    <string name="post_email">Email</string>
    <string name="post_cover_photo">Feature Image</string>
    <string name="post_upload" translatable="false">Upload</string>
    <string name="post_select_cover_photo">Select a good Feature image of the property to attract customers</string>
    <string name="post_next">Next</string>
    <string name="post_post_button">Post</string>
    <string name="saved_no_post">No saved post</string>
    <string name="post_item_year">" year ago"</string>
    <string name="post_item_day">" day ago"</string>
    <string name="post_item_years_ago">year ago</string>
    <string name="account_number_of_post">" posts made"</string>
    <string name="post_details_tk">" TK"</string>
    <string name="post_details_per_month">" per month"</string>
    <string name="post_details_room">" rooms"</string>
    <string name="post_details_sq_ft">" sq. ft"</string>
    <string name="title_activity_drawer_test" translatable="false">DrawerTest</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="fragment_title_my_properties" translatable="false">My Properties</string>
</resources>