<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:clipToPadding="false"
    android:clipChildren="false">


<RelativeLayout
    tools:context="bharatia.com.bharatia.loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home"/>

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_new"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:elevation="4dp"
        android:translationZ="4dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/loginMainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginTop="140dp"
        app:cardCornerRadius="10dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        android:background="@drawable/card_round_corners"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:clipChildren="false"
            android:clipToPadding="false">



            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:hint="@string/login_email"
                android:padding="10dp"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>


            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="Password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_below="@+id/loginEmail"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>

            <TextView
                android:id="@+id/loginForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/loginPassword"/>
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_round_corners"
                android:text="@string/log_in"
                android:layout_below="@+id/loginForgotPassword"
                android:textColor="#fff"
                android:layout_marginBottom="-10dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/loginSocialLogniLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:layout_below="@+id/loginMainCard"
        android:orientation="horizontal">

        <!--<Button-->
        <!--android:id="@+id/facebookLoginBtn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:background="@drawable/button_style"-->
        <!--android:text="f"-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="20sp"-->
        <!--android:textStyle="bold" />-->


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/facebookColor"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:backgroundTint="@color/facebookColor"
            app:cardUseCompatPadding="true">
            <Button
                android:id="@+id/loginFb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_facebook_white_24dp"
                android:drawablePadding="2dp"
                android:background="@color/fui_transparent"
                android:textColor="#fff"
                android:text="Log in"
                android:textStyle="bold"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:backgroundTint="@color/googleColor"
            android:layout_marginLeft="10dp"
            app:cardUseCompatPadding="true">
            <Button
                android:id="@+id/loginGgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_google_plus_white_24dp"
                android:drawablePadding="2dp"
                android:textColor="#fff"
                android:background="@color/fui_transparent"
                android:text="Sign In"
                android:textStyle="bold"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_below="@+id/loginSocialLogniLayout"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_sign_up"
            android:textColor="@color/colorPrimaryGreen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:text="Bharatia"-->
            <!--android:textAlignment="center"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="36dp" />-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">



        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
</ScrollView>