<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home"/>

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_new"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:elevation="4dp"
        android:translationZ="4dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/signUpMainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="10dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        android:background="@drawable/card_round_corners"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:id="@+id/signUpSecondLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>

            <EditText
                android:id="@+id/signUpPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="Phone Number"
                android:inputType="phone"
                android:padding="10dp"
                android:layout_below="@id/signUpEmail"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>

            <android.support.v7.widget.CardView
                android:id="@+id/signUpUserPic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="2dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/signUpPhoneNumber"
                android:layout_centerHorizontal="true">
                <ImageButton
                    android:id="@+id/signUpUserPicImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_account_grey600_48dp"
                    android:scaleType="centerCrop"
                    android:background="#f0f0f0"
                     />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/finishSignUpBtn"
                android:text="@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_round_corners"
                android:layout_below="@+id/signUpUserPic"
                android:textColor="#fff"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="-10dp"/>

        </RelativeLayout>











        <RelativeLayout
            android:id="@+id/signUpMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:visibility="visible">

            <EditText
                android:id="@+id/signUpFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:hint="First Name"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>

            <EditText
                android:id="@+id/signUpLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="Last Name"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_below="@id/signUpFirstName"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>

            <EditText
                android:id="@+id/signUpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/signup_username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_below="@id/signUpLastName"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>


            <EditText
                android:id="@+id/signUpPasswordReEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:hint="Re-Enter Password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_below="@+id/signUpPassword"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>


            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="Password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_below="@+id/signUpUsername"
                android:shadowColor="@color/colorPrimaryGreen"
                android:textColor="@color/colorPrimaryGreen"
                android:textColorHint="@color/colorPrimaryGreen"
                android:background="@drawable/edit_field_background"/>

            <Button
                android:id="@+id/signUpNext"
                android:text="Next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_round_corners"
                android:layout_below="@+id/signUpPasswordReEnter"
                android:textColor="#fff"
                android:layout_marginBottom="-10dp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/signUpSocialLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/or"
        android:layout_margin="20dp"
        android:layout_below="@+id/signUpMainCard"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/signUpSocialLoginText"
        android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/facebookColor"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="7dp"
        android:backgroundTint="@color/facebookColor"
        app:cardUseCompatPadding="true">
        <Button
            android:id="@+id/signUpFb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_facebook_white_24dp"
            android:drawablePadding="2dp"
            android:background="@color/fui_transparent"
            android:textColor="#fff"
            android:text="Log in"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="7dp"
        android:backgroundTint="@color/googleColor"
        android:layout_marginLeft="10dp"
        app:cardUseCompatPadding="true">
        <Button
            android:id="@+id/signUpGgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_google_plus_white_24dp"
            android:drawablePadding="2dp"
            android:textColor="#fff"
            android:background="@color/fui_transparent"
            android:text="Sign In"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"/>
    </android.support.v7.widget.CardView>



    </LinearLayout>
</RelativeLayout>
</ScrollView>